--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/mgibson43/Restaurant-Page#readme",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "csv-loader": "^3.0.5",
     "file-loader": "^6.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "xml-loader": "^1.2.1"
   }
 }
